# MinVR

./: .gitignore  CMakeLists.txt  Cxml.cpp  Cxml.h  LICENSE.txt  Makefile  MinVRSettings.cpp  MinVRSettings.h  MinVRconfig_parser.cpp  MinVRconfig_parser.h  README.md  XML.cpp  driver.cpp  element.cpp  element.h  main.cpp  vrsettup.txt
apps/adapt/: CMakeLists.txt  README  adapted.cpp  adapted.xml  adapted_plugins.cpp  adapted_server.cpp  display-example.xml  mvr.xml  standalone-example.xml
apps/example/: CMakeLists.txt  cave_example.xml  cave_glut.xml  cave_with_server.xml  command_multithread.xml  commandline.xml  desktop.xml  main.cpp
apps/server/: CMakeLists.txt  devices-example.xml  main.cpp
config/: CMakeLists.txt  Cxml.cpp  GamePadController.minvr  HTC_Vive.minvr  HTC_Vive_g3D.minvr  Makefile  MinVRDataCollection.cpp  MinVRDataCollection.h  MinVRDataIndex.cpp  MinVRDataIndex.h  MinVRDataQueue.h  MinVRDatum.cpp  MinVRDatum.h  MinVRDatumFactory.cpp  MinVRDatumFactory.h  MinVRSettings.cpp  MinVRSettings.h  Mini-Vrui.xml  Questions.txt  README.md  VRCoreTypes.h  VRDataCollection.cpp  VRDataCollection.h  VRDataIndex.cpp  VRDataIndex.h  VRDataQueue.cpp  VRDataQueue.h  VRDatum.cpp  VRDatum.h  VRDatumFactory.h  VRSerializable.h  VRWritable.h  XMLUtils.cpp  XMLUtils.h  YURT.minvr  attribute.cpp  default.minvr  desktop-multithreaded.minvr  desktop-oldopengl.minvr  desktop-sidebyside.minvr  (+25 more)
config/Cxml/: Cxml.cpp  Cxml.h  element.cpp  element.h  utils.h
contrib/: CMakeLists.txt
contrib/plugins/: .gitignore
data/: CMakeLists.txt  VRCoreTypes.h  VRDataIndex.cpp  VRDataIndex.h  VRDatum.cpp  VRDatum.h  VRDatumFactory.cpp  VRDatumFactory.h  XMLUtils.cpp  XMLUtils.h
data/Cxml/: XML.h  element.cpp  element.h
display/: CMakeLists.txt  CompositeDisplay.h  VRAbstractGraphicsToolkit.h  VRCallbackDisplayAction.cpp  VRCallbackDisplayAction.h  VRCallbackDisplayFrameAction.cpp  VRCallbackDisplayFrameAction.h  VRCallbackRenderer.cpp  VRCallbackRenderer.h  VRCameraPair.h  VRDisplay.h  VRDisplayAction.h  VRDisplayDevice.cpp  VRDisplayDevice.h  VRDisplayDeviceFactory.cpp  VRDisplayDeviceFactory.h  VRDisplayFactory.h  VRDisplayFrameAction.h  VRDisplayGraphNode.h  VRDisplayGraphNodeFactory.cpp  VRDisplayGraphNodeFactory.h  VRDisplayManager.cpp  VRDisplayManager.h  VRDisplayManagerThreaded.h  VRFrameController.h  VRGraphicsWindow.h  VRHMDCameraPair.h  VRHeadTrackedPanel.h  VRHeadTrackedPanelCameraPair.h  VRRenderState.cpp  VRRenderState.h  VRRenderer.h  VRStereoFormatter.h  VRViewport.h  VRWindowSettings.h
display/base/: VRBasicRenderer.cpp  VRBasicRenderer.h  VRDisplayNode.cpp  VRDisplayNode.h  VRFunctionRenderCallback.cpp  VRFunctionRenderCallback.h  VRRenderCallback.h
display/concrete/: BaseDisplayDevice.cpp  BaseDisplayDevice.h  BaseDisplayFactory.cpp  BaseDisplayFactory.h  CommandLineDisplay.cpp  CommandLineDisplay.h  CompositeDisplay.cpp  CompositeDisplay.h  CompositeDisplayFactory.cpp  CompositeDisplayFactory.h  CompositeDisplayFactory2.cpp  CompositeDisplayFactory2.h  DataIndexWrapperDisplay.cpp  DataIndexWrapperDisplay.h  InternalLoopController.h
display/console/: VRConsoleDisplay.cpp  VRConsoleDisplay.h
display/display-graph/: VRDisplayGraphNode.cpp  VRDisplayGraphNode.h  VRFisheyeNode.h  VRStereoNode.h  VRViewportNode.h  VRWindowChildNode.h  VRWindowNode.h
display/graphics/: VRGraphicsWindowChild.cpp  VRGraphicsWindowChild.h  VRGraphicsWindowNode.cpp  VRGraphicsWindowNode.h
display/synchronization/: SynchronizedDisplay.h  VRSynchronizedDisplay.h
display/threading/: AllowsThreading.h
event/: CMakeLists.txt  VRByteData.h  VRByteStream.h  VREvent.cpp  VREvent.h  VREventFactory.cpp  VREventFactory.h  VREventQueue.cpp  VREventQueue.h  VRInputDevice.h
examples/CavePainting-Lite/: CMakeLists.txt  CTestConfig.cmake  LICENSE  QuickShapes.cpp  QuickShapes.h  README.md  UIExample.cpp  UIExample.h  main.cpp
examples/ConfigExample/: CMakeLists.txt  exercz.cpp  sample.cpp
examples/SimpleOpenGL/: 3DTV.xml  CMakeLists.txt  README.md  YURT.xml  YURT_config.xml  adaptee.cpp  copy.xsl  desktop.xml  desktopHierarchical.xml  desktopSideBySide.xml  ivlabcave.xml  ivlabcave_multithreaded.xml  ivlabcave_oneClient.xml  ivlabcave_standalone.xml  ivlabcavefront.xml  multithreaded.xml  testalldisplaynodes.xml  vrexample.cpp
examples/SimpleOpenGLGLFW/: 3DTV.xml  CMakeLists.txt  ExampleApp.cpp  desktop.xml  ivlabcave.xml  simple.xml  testalldisplaynodes.xml  vrexample.cpp  vrpntest.xml
external-patches/TUIO/: CMakeLists.txt
plugin/: CMakeLists.txt  Plugin.h  PluginFramework.h  PluginInterface.h  PluginManager.cpp  PluginManager.h  SharedLibrary.cpp  SharedLibrary.h
plugins/: .gitignore  CMakeLists.txt  TEMPLATE-CMakeLists-for-Plugins.txt
plugins/CPP11/: CMakeLists.txt
plugins/FREEGLUT/: CMakeLists.txt  README.md
plugins/G3D/: CMakeLists.txt
plugins/GLFW/: .gitignore  CMakeLists.txt  README.md  display-example.xml
plugins/Gainput/: CMakeLists.txt  README.md
plugins/HoloPlay/: CMakeLists.txt  README.md
plugins/OpenGL/: CMakeLists.txt
plugins/OpenVR/: CMakeLists.txt  README.md
plugins/Photon/: CMakeLists.txt  README.md
plugins/Python/: CMakeLists.txt  README.md
plugins/Scalable/: CMakeLists.txt  README.md
plugins/TUIO/: .gitignore  CMakeLists.txt  README.md
plugins/Threading/: CMakeLists.txt
plugins/VRPN/: CMakeLists.txt
plugins/VTK/: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/api/: MinVR.h  VRAnalogEvent.h  VRAnalogState.h  VRApp.h  VRAudioState.h  VRButtonEvent.h  VRButtonState.h  VRConsoleState.h  VRCursorEvent.h  VRCursorState.h  VREvent.h  VREventHandler.h  VRGraphicsApp.h  VRGraphicsHandler.h  VRGraphicsState.h  VRHapticsState.h  VRRenderHandler.h  VRTrackerEvent.h  VRTrackerState.h  VRWindowResizeEvent.h
src/config/: CMakeLists.txt  MVRLookup.cpp  README.md  VRCoreTypes.h  VRDataIndex.cpp  VRDataIndex.h  VRDataQueue.cpp  VRDataQueue.h  VRDatum.cpp  VRDatum.h  VRDatumFactory.cpp  VRDatumFactory.h  VRWritable.h  t.xml
src/display/: CMakeLists.txt  README.md  VRConsoleNode.cpp  VRConsoleNode.h  VRDisplayNode.cpp  VRDisplayNode.h  (+20 more)
(+516 files in other folders)
